--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ authors = [
 ]
 dependencies = [
     "selenium>=4.16.0",
+    "requests>=2.31.0",
+    "pypdf>=4.0.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
@@ -23,6 +25,7 @@ managed = true
 dev-dependencies = [
     "mypy>=1.8.0",
     "ruff>=0.1.14",
+    "types-requests>=2.31.0.20240106",
 ]
 
 [tool.hatch.metadata]
